tests/ui/foreign_println.stderr
Error [E0011]: Jet calls it `print`, not `println`
  --> tests/ui/foreign_println.jet:2:5
    |
  2 |     println("hi");
    |     ^^^^^^^
 Why: `print` already ends the line for you
 Fix: replace `println` with `print`
